# Byte-le-Engine-v3

./: README.md  pyproject.toml
.github/workflows/: build.yaml  deploy-client-package.yaml  deploy-docs.yaml  test-game.yaml  test-server.yaml
docs/: controls.rst  useful_commands.rst
example_clients/: bad_client.py  e_bibby.py  generator_client.py
src/bytele/: cli.py
src/bytele/game/: config.py  constants.py  engine.py
src/bytele/server/: client_runner.py  (+9 more)
tests/game/: test_attack_controller.py  test_avatar.py  test_avatar_inventory.py  test_battery_spawner.py  test_boosting_controller.py  test_bot.py  test_bot_movement_controller.py  test_game_board.py  test_game_board_no_gen.py  test_game_object_list.py  test_generator.py  test_initialization.py  test_interact_controller.py  test_inventory_controller.py  test_item.py  test_movement_controller.py  test_movement_controller_if_occupiable_station_is_occupiable.py  test_movement_controller_if_occupiable_stations.py  test_movement_controller_if_stations.py  test_movement_controller_if_wall.py  test_occupiable_station.py  test_pathfind_controller.py  test_player.py  test_power_controller.py  test_scrap_spawner.py  test_station.py  test_tile.py  test_timer.py  test_utils.py  test_vector.py  test_vent.py
tests/server/: conftest.py  test_main.py  test_run.py  test_submission.py  test_tournament.py
tools/: add_teams.sh  base_client.py  build.bat  build.sh  client-build.sh  compile_map_data.py  db_viewer.py  preview_docs.sh  register_team.sh  run_game.sh  run_tests.sh  start_client_runner.sh  start_server_api.sh  start_visualizer_runner.sh  submit.sh
(+160 files in other folders)
